--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,31 @@
+
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "sample app", root_path, class: "navbar-brand", id: "logo" %>
       <nav>
+
         <ul class="nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <li><%= link_to 'About', about_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <% if signed_in? %>
+            <li><%= link_to 'Users', '#' %></li>
+             <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
+               <ul class="dropdown-menu" role="menu">
+                 <li><%= link_to 'Profile', current_user %></li>
+                 <li><%= link_to 'Setings', '#' %></li>
+                 <li class="divider"></li>
+                 <li><%= link_to 'Sign out', signout_path, method: 'delete' %></li>
+               </ul>
+             </li>
+          <% else %>
+            <li><%= link_to 'Sing In', signin_path %></li>
+          <% end %>
         </ul>
+
       </nav>
     </div>
   </div>
