--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,12 +11,12 @@
           <li><%= link_to 'About', about_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
           <% if signed_in? %>
-            <li><%= link_to 'Users', '#' %></li>
+            <li><%= link_to 'Users', users_path %></li>
              <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
                <ul class="dropdown-menu" role="menu">
                  <li><%= link_to 'Profile', current_user %></li>
-                 <li><%= link_to 'Setings', '#' %></li>
+                 <li><%= link_to 'Setings', edit_user_path(current_user) %></li>
                  <li class="divider"></li>
                  <li><%= link_to 'Sign out', signout_path, method: 'delete' %></li>
                </ul>
