--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,19 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user do |f| %>
-        <%= render 'shared/error_messages' %>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-        <br/>
-        <%= f.label :email %>
-        <%= f.email_field :email %>
-        <br/>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-        <br/>
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation %>
-        <br/>
+        <%= render 'fields', f: f %>
         <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
