--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,17 @@
 <% provide :title, 'Home' %>
+
+<% if signed_in? %>
+    <div class="row">
+      <aside class="col-md-4">
+        <section><%= render 'shared/micro_post_form' %></section>
+        <section><%= render 'shared/user_info' %></section>
+      </aside>
+      <div class="col-md-4">
+        <h3>MicroPosts feed.</h3>
+        <%= render 'shared/feed' %>
+      </div>
+    </div>
+<% else %>
 <div class="jumbotron">
   <h1>Welcome to the Sample App</h1>
 
@@ -14,3 +27,5 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+
+<% end %>
