--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.micro_posts.any? %>
+        <h3>MicroPosts ( <%= @user.micro_posts.count %> )</h3>
+        <ol class="microposts">
+          <%= render @micro_posts %>
+        </ol>
+        <%= will_paginate @micro_posts, renderer: BootstrapPagination::Rails %>
+    <% end %>
+  </div>
 </div>
