--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,9 +158,31 @@ aside {
   }
 }
 
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid gainsboro;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+
 .gravatar {
   float: left;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 /* forms */
@@ -225,9 +247,10 @@ input.btn.btn-large.btn-primary {
 }
 .gravatar {
   float: left;
-  margin-right: 10px;
+  margin-right: 5px;
   width: 52px;
   height: 52px;
+  margin-bottom: 5px;
 }
 aside {
   textarea {
