--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,7 @@
     <div class="row">
       <aside class="col-md-4">
         <section><%= render 'shared/micro_post_form' %></section>
+        <section><%= render 'shared/stats' %></section>
         <section><%= render 'shared/user_info' %></section>
       </aside>
       <div class="col-md-4">
